# how_to_research

./: .gitignore  README.md  access_test.py  access_test2.py  access_test_json.py  create_env.sh  datacite_test.md  db_references.py  extract_crossref.py  extract_crossref_test.py  pyproject.toml  rename_crossref.py  requirements.txt  set_env.sh  sources.md
__old__/: create.py  update.py
pressentation/: Untitled 1.odp
scripts/: create_env.sh
src/lit_stud/: 1_extract_crossref.py  2_count_ref.py  3_create_db.py
src/lit_stud/scripts/: 1_extract_crossref.py  2_count_ref.py  3_create_db.py  4.0_evaluate.py  4.1_evaluate_with_4.py  4_evaluate.py  4_use.py  5_parse_results.py  5_results.py  6_evaluate_with_4.py  6_rate_abstracts.py  7_plot_rating.py
src/lit_stud/utils/: abstract.py  chatgpt.py  config_log.py  crossref_db.py  duckdb.py  keywords.py
src/lit_stud/utils/os/: files.py
tests/: test_keygroups.py  test_utils_abstract.py
utils/extract/: base.py
