[project]
name = "lit-stud"
version = "0.1.0"
authors = [
  { name="jkCXf9X4"},
]
description = "Extract crossref data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jkCXf9X4/how_to_research"

[build-system]
requires = ["setuptools >= 61.0"]